added timer to vi
added timer to input.vi to reduce unnecessary usage of system resources.
changed map.html to fix marker dissappearing bug.

--- a/Overview PC/map.html
+++ b/Overview PC/map.html
@@ -84,7 +84,7 @@
       // provide aircraft index number
       function followAircraft(index){
         if (markers[index].getVisible()==true){
-          map.setCenter(markers[index].getPosition());
+          map.panTo(markers[index].getPosition());
         }
       }
 
