--- a/Overview PC/map.html
+++ b/Overview PC/map.html
@@ -35,7 +35,8 @@
         map = new google.maps.Map(document.getElementById('map'), {
           zoom: 10,
           center: {lat: 52, lng: 1},
-          mapTypeId: 'hybrid'
+          mapTypeId: 'hybrid',
+          maxZoom: 16
         });
 
         //Initialise the two markers to be used.
